--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -56,6 +56,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_branch: gh-pages
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.PERSONAL_TOKEN }}
           publish_dir: notebooks
           force_orphan: true
